<resources>
    <string name="app_name">Vity</string>

    <!-- place holder strings -->
    <string name="text_search">Search</string>
    <string name="text_settings">Settings</string>
    <string name="text_distance">Distance</string>

    <!-- general -->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="username">username</string>
    <string name="enter_name">Please enter your name</string>
    <string name="general">General</string>
    <string name="provide_username">Change username here</string>

    <!-- buttons -->
    <string name="btn_image">Image…</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_search">Search</string>
    <string name="btn_show">Show on Map</string>
    <string name="btn_edit">Edit…</string>
    <string name="btn_location">Update current location</string>
    <string name="btn_delete">Delete</string>

    <!-- titles -->
    <string name="titel_new">New Activity</string>
    <string name="titel_edit">Edit Activity</string>
    <string name="titel_search">Search Activity</string>
    <string name="titel_settings">Settings</string>

    <!-- new activity, edit activity -->
    <string name="form_titel">Title</string>
    <string name="form_description">Description</string>
    <string name="form_category">Category</string>
    <string name="form_link">Link</string>
    <string name="img_from_gallery">Open existing image</string>
    <string name="img_from_camera">Take a new photo</string>
    <string name="select_picture_using">Select your picture using:</string>
    <string name="take_picture_using">Take your picture using:</string>

    <!-- find activity -->
    <string name="form_search">Search</string>
    <string name="form_category2">Category</string>
    <string name="form_perimeter">Perimeter</string>

    <!-- activity categories -->
    <string name="cat_food">Food and drinks</string>
    <string name="cat_shop">Shopping</string>
    <string name="cat_stay">Place to stay</string>
    <string name="cat_museum">Museum</string>
    <string name="cat_walk">Walk</string>
    <string name="cat_other">Other</string>

    <!-- menu -->
    <string name="men_map">Map</string>
    <string name="men_settings">Settings</string>
    <string name="men_new">New</string>
    <string name="men_search">Search</string>

    <!-- menu ids -->
    <string name="opt_map">opt_map</string>
    <string name="opt_settings">opt_setings</string>
    <string name="opt_new">opt_new</string>
    <string name="opt_search">opt_search</string>

    <!-- detail view of activity -->
    <string name="detail_category">Category</string>
    <string name="detail_link">Link</string>
    <string name="detail_date">Creation/modification date</string>
    <string name="detail_owner">Created/modified by</string>
    <string name="detail_description">Description</string>
    <string name="activity_title_image">Activity_Title_Image</string>

    <!-- warnings, messages -->
    <string name="warning_missing_title">Please fill in a title for your new activity.</string>
    <string name="title_activity_maps2">Map</string>
    <string name="warning_not_load_map_style">Could not load map style.</string>
    <string name="warning_not_find_map_style">Could not find map style.</string>
    <string name="gps_disabled">GPS is disabled.</string>
    <string name="enable_gps">To use the App with your current Location, you have to turn on gps.</string>
    <string name="permission_denied_gps">Permission denied to use GPS.</string>
    <string name="permission_denied_fine_location">Permission denied to use location.</string>
    <string name="permission_denied_fine_location_1">Permission denied to use location1.</string>
    <string name="permission_denied_fine_location_2">Permission denied to use location2.</string>
    <string name="permission_denied_fine_location_3">Permission denied to use location3.</string>
    <string name="no_results">No results for this category and/or distance.</string>
    <string name="bad_image_request">Bad Image Request. Please Try Again!</string>
    <string name="my_position">That\'s me!</string>
    <string name="no_location_possible">Could not find your device\s location. Please locate again.</string>
    <string name="warning_no_item_selected">No item selected. Please select item first.</string>
    <string name="image_saved">The image was saved: </string>



</resources>
