<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        tools:context=".activity.ActivityEdit">

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/titel_edit" />

        <EditText
            android:id="@+id/new_name"
            style="@style/text_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/form_titel"
            android:inputType="text" />

        <EditText
            android:id="@+id/new_description"
            style="@style/text_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/form_description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/new_link"
            style="@style/text_hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:hint="@string/form_link"
            android:inputType="textUri" />

        <Spinner
            android:id="@+id/new_category"
            style="@style/text_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:drawSelectorOnTop="true"
            android:entries="@array/categories"
            android:entryValues="@array/category_values"
            android:popupBackground="@drawable/spinner_style" />

        <ImageView
            android:id="@+id/new_detail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/activity_title_image"
            android:scaleType="center" />

        <TextView
            android:id="@+id/new_detail_location"
            style="@style/text_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"/>

        <Button
            android:id="@+id/new_btn_image"
            style="@style/btn_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:onClick="onClickAddPicture"
            android:text="@string/btn_image" />

        <Button
            android:id="@+id/new_btn_location"
            style="@style/btn_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:onClick="onClickAddLocation"
            android:text="@string/btn_location" />

        <Button
            android:id="@+id/btn_update"
            style="@style/btn_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:onClick="onClickUpdateActivity"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/btn_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:onClick="onClickDelete"
            android:text="@string/btn_delete" />
    </LinearLayout>
</ScrollView>