<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.ActivityMap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/title_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titel_new" />

    <EditText
        style="@style/form_text_complete"
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_titel"
        android:inputType="text" />

    <Spinner
        android:id="@+id/new_category"
        style="@style/spinner_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:entries="@array/categories"
        android:entryValues="@array/category_values"/>

    <Button
        android:id="@+id/new_btn_image"
        style="@style/btn_standard_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickAddPicture"
        android:text="@string/btn_image" />

    <Button
        android:id="@+id/new_btn_location"
        style="@style/btn_standard_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickAddLocation"
        android:text="@string/btn_location" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

            <Button
                android:id="@+id/new_btn_save"
                style="@style/btn_standard_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:onClick="onClickSaveNewActivity"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/new_btn_cancel"
                style="@style/btn_standard_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:onClick="onClickCancel"
                android:text="@string/btn_cancel" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>