<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.ActivityDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:id="@+id/detail_title"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/activity_title_image"
            android:scaleType="fitCenter" />

        <TableLayout
            android:id="@+id/detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginBottom="10sp">
                <TextView
                    style="@style/text_normal_bold"
                    android:text="@string/detail_category"
                    android:layout_weight="0.5"/>
                <TextView android:id="@+id/detail_cateogry"
                    android:layout_width="match_parent"
                    style="@style/text_normal"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="10sp">
                <TextView
                    style="@style/text_normal_bold"
                    android:text="@string/detail_link"
                    android:layout_weight="0.5"/>
                <TextView android:id="@+id/detail_link"
                    android:layout_width="match_parent"
                    style="@style/text_normal"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="10sp">
                <TextView
                    style="@style/text_normal_bold"
                    android:text="@string/detail_date"
                    android:layout_weight="0.5"/>
                <TextView android:id="@+id/detail_date"
                    android:layout_width="match_parent"
                    style="@style/text_normal"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="10sp">
                <TextView
                    style="@style/text_normal_bold"
                    android:text="@string/detail_owner"
                    android:layout_weight="0.5"/>
                <TextView android:id="@+id/detail_owner"
                    android:layout_width="match_parent"
                    style="@style/text_normal"
                    android:textAlignment="textEnd"
                    android:layout_weight="0.5"/>
            </TableRow>

        </TableLayout>

        <TextView
            style="@style/text_normal_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/detail_description" />

        <TextView
            android:id="@+id/detail_description"
            style="@style/text_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
        <Button
            android:id="@+id/detail_btn_show"
            style="@style/btn_standard"
            android:layout_weight="0.45"
            android:onClick="onClickShowOnMap"
            android:text="@string/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"/>

        <Button
            android:id="@+id/detail_btn_cancel"
            style="@style/btn_standard"
            android:layout_weight="0.45"
            android:onClick="onClickCancel"
            android:text="@string/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>